--- a/index.html
+++ b/index.html
@@ -5,26 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class</title>
+    <title>Counter</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     
-    <main>
-        <div class="pesan">
-            <span>Nol</span>
-        </div>
-    </main>
-    <header>
-        <div class="counter">
-            <h3>0</h3>
-        </div>
-        <div class="button">
-            <button>-</button>
-            <button>+</button>
-        </div>
-    </header>
+    <counter-number></counter-number>
 
     <script src="js/sweetalert2.all.js"></script>
     <script src="js/script.js"></script>
